# Data-Comparator

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  run.py  文件夹结构.md  激活虚拟环境.md
.claude/: index.json
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/tasks/05-22-frontend-backend-split/: implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/00-bootstrap-guidelines/: implement.jsonl  task.json
.trellis/tasks/archive/2026-05/05-22-frontend-backend-split/: check.jsonl  task.json
.trellis/workspace/decade/: index.md  journal-1.md
docs/: 使用手册.md  开发文档.md  版本更新.md
scripts/: CLAUDE.md  README_Nuitka.md  app.spec  build.bat  build_script.py  build_with_nuitka.bat  version_info.txt
src/: CLAUDE.md  main.py  main_web.py
src/backend/: CLAUDE.md
src/backend/application/: CLAUDE.md  comparison_runner.py  processing_service.py
src/backend/domain/: CLAUDE.md  data_comparison.py  dataframe_utils.py  excel_header_utils.py  excel_utils.py  highlight_optimizer.py  highlight_utils.py  processing_control.py  sheet_process_result.py
src/backend/infrastructure/: CLAUDE.md  config_manager.py  file_runtime.py  parameter_repository.py  progress_manager.py
src/config/: __init__.py  global_config.py
src/core/: data_comparison.py  excel_header_utils.py  excel_utils.py  highlight_utils.py
src/frontend/: CLAUDE.md  gui_update_manager.py  web_api.py  window_utils.py
src/gui/: CLAUDE.md  main_window.py  parameter_manager.py
src/gui/components/: __init__.py  parameter_card_frame.py  scrollable_frame.py  top_operations_bar.py
src/gui/dialogs/: error_dialog.py  help_dialog.py
src/shared/: CLAUDE.md  __init__.py  contracts.py  log_utils.py  resource_utils.py
src/utils/: config_manager.py  constants.py  file_utils.py  gui_update_manager.py  highlight_optimizer.py  logger.py  progress_manager.py  sheet_process_result.py  stop_flag_utils.py
tests/: CLAUDE.md  test_comparison_runner.py  test_highlight_optimizer.py  test_import_smoke.py  test_log_utils.py  test_parameter_repository.py  test_processing_control.py  test_processing_service.py  test_progress_manager.py  test_sheet_process_result.py  test_web_api.py
